Fixed filter labels not showing and filter option not changing back from brand

--- a/src/main/resources/static/css/components.css
+++ b/src/main/resources/static/css/components.css
@@ -178,7 +178,7 @@ input[id="numberFilter"]:focus,
 }
 
 /* Hide all filter labels by default (controlled by JavaScript) */
-#priceFilterLabel,
+/*#priceFilterLabel,
 #caseSizeFilterLabel,
 #cpuClockFilterLabel,
 #gpuClockFilterLabel,
@@ -186,7 +186,7 @@ input[id="numberFilter"]:focus,
 #memorySpeedFilterLabel,
 #psuWattageFilterLabel {
     display: none;
-}
+}*/
 
 .filter-input-group {
     display: flex;
